--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ img {
 .address-list-mail-icon {
   margin-right: 10px;
 
-  fill: var(--text-color);
+  fill: currentcolor;
 }
 
 .address-list-link {
@@ -167,14 +167,9 @@ img {
   color: var(--accent-color);
 }
 
-.address-list-link:hover .address-list-mail-icon,
-.address-list-link:focus .address-list-mail-icon {
-  fill: var(--accent-color);
-}
-
 .address-list-mail-icon:hover,
 .address-list-mail-icon:focus {
-  fill: var(--accent-color);
+  fill: currentcolor;
 }
 /*===============END HEADER============*/
 
@@ -260,6 +255,35 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
+}
+
+.advantages-list-item-title::before {
+  content: "";
+  display: block;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-size: content;
+  background-position: center;
+}
+
+.icon-1::before {
+  background-image: url(../images/svg/advantages01.svg);
+}
+
+.icon-2::before {
+  background-image: url(../images/svg/advantages02.svg);
+}
+
+.icon-3::before {
+  background-image: url(../images/svg/advantages03.svg);
+}
+
+.icon-4::before {
+  background-image: url(../images/svg/advantages04.svg);
 }
 
 .advantages-list-item-text {
@@ -553,17 +577,32 @@ img {
   background-color: var(--accent-color);
 }
 
+
 .example-list {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 
-.example-list-item:not(:nth-child(3n)) {
+.example-list-item {
+  flex-basis: calc(100%/3-30px);
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+/* .example-list-item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
 .example-list-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
+  margin-bottom: 30px; */
+}
+
+.example-list-item:hover,
+.example-list-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .example-list-information {
