--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,6 @@ img {
   background-color: #f5f4fa;
   border-radius: 4px;
   background-repeat: no-repeat;
-  background-size: content;
   background-position: center;
 }
 
@@ -577,7 +576,6 @@ img {
   background-color: var(--accent-color);
 }
 
-
 .example-list {
   display: flex;
   flex-wrap: wrap;
@@ -586,7 +584,7 @@ img {
 }
 
 .example-list-item {
-  flex-basis: calc(100%/3-30px);
+  flex-basis: calc(100% / 3-30px);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -596,8 +594,7 @@ img {
 }
 
 .example-list-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px; */
-}
+  margin-bottom: 30px; }*/
 
 .example-list-item:hover,
 .example-list-item:focus {
