--- a/css/styles.css
+++ b/css/styles.css
@@ -579,22 +579,15 @@ img {
 .example-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
 }
 
-.example-list-item {
-  flex-basis: calc(100% / 3-30px);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-/* .example-list-item:not(:nth-child(3n)) {
+.example-list-item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
 .example-list-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px; }*/
+  margin-bottom: 30px;
+}
 
 .example-list-item:hover,
 .example-list-item:focus {
