--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
   color: var(--title-text-color);
 }
 
-.advantages-list-item-title::before {
+.advantages-list-item::before {
   content: "";
   display: block;
   margin-bottom: 30px;
@@ -588,8 +588,8 @@ img {
   margin-bottom: 30px;
 }
 
-.example-list-item:hover,
-.example-list-item:focus {
+.example-list-link:hover,
+.example-list-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
