--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,7 @@ img {
 
 .example-list-link:hover,
 .example-list-link:focus {
+  display: block;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
